app/assets/stylesheets/navbar.css.less
@import "stubs/variables_overrides.css.less";
@import "twitter/bootstrap/mixins";

.navbar {
  .divider-vertical {
    .opacity(70);
  }

  .brand {
    font-family: "Pacifico";
    color: @grayLighter;
    font-size: 20px;
    line-height: 20px;
    text-shadow: 0 -1px 0 fade(@black, 25%);
    .transition(text-shadow .4s ease-out);

    &:hover {
      color: white;
      text-shadow: 0 -1px 0 fade(@black, 25%),
                   0 0 25px fade(@white, 90%);
    }
  }
}

.brand-logo {
  position: relative;
  display: inline-block;
  top: 4px;
  .size(15px, 38px);
  vertical-align: top;
}

#navbar-user-info {
  .navbar-profile-link {
    position: relative;

    img {
      position: absolute;
      border: 1px solid @grayLighter;
    }

    span {
      margin-left: 35px;
    }
  }
}

@media (min-width: 768px) {
  #navbar-user-info {
    .navbar-profile-link {
      img {
        top: 7px;
        left: 15px;
        .square(25px);
      }
    }
  }
}

@media (max-width: 767px) {
  #navbar-user-info {
    .navbar-profile-link {
      .size(21px, 18px);

      img {
        top: 5px;
        left: 9px;
        .square(30px);
      }
    }
  }

  .navbar .container .brand,
  .navbar .container .nav {
    position: relative;
    z-index: 1;
  }

  .center-notifications {
    position: absolute;
    width: 100%;
    text-align: center;
    .center-notifications-container {
      display: inline-block;
    }
  }
}

@media (min-width: 768px) and (max-width: 979px) {
  .navbar {
    position: relative;
    z-index: 1;
  }
}

.notifications {
  position: relative;

  a {
    padding-left: 10px !important;
    padding-right: 10px !important;
  }

  i {
    position: relative;
    top: 2px;
    font-size: 20px;
    text-shadow: 0 1px 0px fade(darken(@icareMainColor, 20%), 85%);
  }

  &.read {
    i {
      color: fade(darken(@icareMainColor, 20%), 45%);
      text-shadow: none;
    }
  }

  &.active i {
    color: @white;
  }

  .count {
    position: absolute;
    top: 3px;
    right: 4px;
    height: 12px;
    padding: 2px 5px;
    font-weight: bold;
    line-height: 12px;
    font-size: 10px;
    background: fade(@red, 80%);
  }
}

.popover-ajax-content,
.popover-static-content {
  margin-bottom: 9px;
  padding: 10px 10px 9px !important;
}

.popover-title {
  font-family: @sansFontFamily;
  color: @grayDark;
}

.popover-content {
  padding: 0 0 @baseLineHeight/2 0;
}

.popover-elements {
  font-size: 12px;
  overflow: hidden;

  a {
    display: table;
    width: 100%;
    color: @grayDark;
    text-decoration: none;

    &:hover {
      background: @grayLighter;
    }
  }

  li + li {
    border-top: 1px solid @grayLighter;
  }

  .popover-element-avatar,
  .popover-element-content {
    display: table-cell;
    vertical-align: top;
  }

  .popover-element-avatar {
    width: 30px;
    padding-right: 5px;
  }

  .popover-element-content {
    width: 150px;
    max-width: 150px;
    overflow: hidden;
    line-height: 16px;
  }
}

.loading {
  width: 24px;

  #loading-spinner {
    display: none;
    position: relative;
    top: 12px;
    right: 5px;
    .size(17px, 24px);
    background: url('/assets/ajax-spinner-24x17.gif');
    .background-size(24px 17px);
  }
}

